--- a/artifacts/Application/cruisemappingcopy/cruisemappingcopy.json
+++ b/artifacts/Application/cruisemappingcopy/cruisemappingcopy.json
@@ -9069,7 +9069,7 @@
 	"ui5_url": "",
 	"cus_theme": "",
 	"css": "file:///css.css",
-	"compiledCss": "file://script/undefined/undefined.script",
+	"compiledCss": "file:///compiledCss.css",
 	"header": "",
 	"manifest": "",
 	"globalScript": null,
