--- a/artifacts/Tile/User Settings.json
+++ b/artifacts/Tile/User Settings.json
@@ -2,8 +2,6 @@
 	"id": "f972a00d-cf1b-4921-bace-e9b0797af2ac",
 	"createdAt": "2024-06-18T00:59:37.000Z",
 	"createdBy": "admin",
-	"lightTileLayouts": null,
-	"darkTileLayouts": null,
 	"translation": [],
 	"storeItem": {},
 	"settings": null,
@@ -85,7 +83,10 @@
 	"cockpitTile": false,
 	"cardImageDarkNone": false,
 	"imageDarkNone": false,
-	"oneTileLayout": false,
+	"noInheritTileLayout": false,
+	"imageType": null,
 	"package": "a976c3e0-971c-434d-848c-28e99fa5bf0d",
-	"roles": []
+	"roles": [],
+	"lightTileLayouts": [],
+	"darkTileLayouts": []
 }
