--- a/artifacts/Tile/Sample Web App.json
+++ b/artifacts/Tile/Sample Web App.json
@@ -1,34 +1,38 @@
 {
-	"id": "7c8f00e9-68f8-4704-a4c8-5a212e2eba2d",
-	"createdAt": "2024-07-06T21:43:38.000Z",
-	"createdBy": "admin",
+	"id": "38847949-45ee-41ca-a3c5-9af62e6279ed",
+	"createdAt": "2025-04-09T03:48:05.000Z",
+	"createdBy": "james",
 	"translation": [],
 	"storeItem": {},
-	"settings": null,
-	"title": "Maintain Global Variables",
+	"settings": {
+		"adaptive": {
+			"id": ""
+		}
+	},
+	"title": "Sample Web App",
 	"subTitle": null,
-	"description": "Variables for Use in Apps and Scripts",
+	"description": null,
 	"categoryID": null,
 	"sort": null,
 	"urlApplication": null,
-	"actionApplication": "globalvariables",
+	"actionApplication": "",
 	"actionParameters": null,
-	"actionURL": null,
-	"openDialog": false,
+	"actionURL": "https://dxp24.co.za:8081/webapp/sampleWebApp",
+	"openDialog": true,
 	"openWindow": false,
 	"openFullscreen": false,
 	"forceRow": false,
 	"frameType": null,
-	"type": "",
+	"type": null,
 	"image": null,
 	"imageDark": null,
-	"icon": "sap-icon://fa-solid/globe",
+	"icon": "sap-icon://nep/webapp",
 	"backgroundType": null,
 	"backgroundColor": null,
 	"tileLayoutLight": null,
 	"tileLayoutDark": null,
 	"backgroundShade": null,
-	"tileApplication": "",
+	"tileApplication": null,
 	"hideHeaderL": false,
 	"hideHeaderM": false,
 	"hideHeaderS": false,
@@ -36,8 +40,8 @@
 	"hideTileMobile": false,
 	"hideTileTablet": false,
 	"enableDocumentation": false,
-	"navObject": "globalVariables",
-	"navAction": "Edit",
+	"navObject": "",
+	"navAction": "",
 	"dialogWidth": null,
 	"dialogHeight": null,
 	"tileApplicationStyleClass": null,
@@ -59,10 +63,10 @@
 	"helpText": null,
 	"helpEnabled": false,
 	"openClickTile": false,
-	"ver": "25.02.25.1324",
-	"actionWebApp": null,
-	"name": "Maintain Global Variables",
-	"cardWidth": "Medium",
+	"ver": "25.04.10.0118",
+	"actionWebApp": "",
+	"name": "Sample Web App",
+	"cardWidth": null,
 	"cardHeight": null,
 	"cardHeightFit": false,
 	"cardImage": null,
@@ -79,20 +83,14 @@
 	"bodyHeight": null,
 	"roleTag": null,
 	"sapICFNode": null,
-	"actionType": "A",
-	"cockpitTile": true,
+	"actionType": "U",
+	"cockpitTile": false,
 	"cardImageDarkNone": false,
 	"imageDarkNone": false,
 	"noInheritTileLayout": false,
 	"imageType": null,
 	"package": "a976c3e0-971c-434d-848c-28e99fa5bf0d",
-	"roles": [
-		{
-			"id": "04a11f29-b278-4eb0-90f0-5fe5afe114f1",
-			"name": "Cruise Admin",
-			"ver": "25.04.09.0343"
-		}
-	],
+	"roles": [],
 	"lightTileLayouts": [],
 	"darkTileLayouts": []
 }
